refactor: remove deprecated chained variable support and clean up related files (#2091)
Chained variable is removed.
I went through all code looking for instances of the word "chain"; only
unrelated mentions are left.